--- a/frontend/src/Forms/RegisterForm.css
+++ b/frontend/src/Forms/RegisterForm.css
@@ -54,3 +54,10 @@ body {
   right: 10px;
   cursor: pointer;
 }
+.form--toggle {
+    margin-top: 10px;
+    cursor: pointer;
+    color: blue;
+    text-decoration: underline;
+  }
+  
