--- a/frontend/src/Property/PropertyList.css
+++ b/frontend/src/Property/PropertyList.css
@@ -16,3 +16,87 @@
     grid-template-columns: 1fr 1fr 1fr;
   }
 }
+svg{
+    height :30px;
+    text-align: left;
+}
+.filter div input{
+    height:50px;
+    width:50%;
+    border:none;
+    background:#efeee5;
+    border-bottom:1px solid #c3c3bff1;
+}
+.search-container{
+    width:100%;
+    height:100vh;
+    margin-top:30px;
+    
+}
+.con-container{
+    display :flex;
+}
+.filter-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px;
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 500px;
+    margin: 0 auto;
+  }
+  
+.filter-container input {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 100%;
+    box-sizing: border-box;
+    
+  }
+
+  .search-input{
+    padding:20px 40px;
+
+  }
+  .search-bar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 40px;
+    
+  }
+  
+  button {
+   
+    padding: 10px 15px;
+    cursor: pointer;
+  }
+  
+  .property-list {
+    display: flex;
+    flex-wrap: wrap;
+   
+    gap: 20px;
+    padding: 20px;
+    box-sizing: border-box;
+  }
+  
+  .filter-btn{
+    width:8%;
+  }
+  .grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+  }
+  .user-dashboard {
+    margin-bottom: 20px;
+    
+    height:100vh;
+    background:#efeee5; 
+    width:20%;
+    position:fixed;
+    top:0;
+  } 
