chore: Update background color and button styling in Navbar and PropertyList

--- a/frontend/src/Forms/CreateProperty.css
+++ b/frontend/src/Forms/CreateProperty.css
@@ -54,7 +54,7 @@ button{
     padding: 20px 0px;
     width: 50%;
     margin:10px;
-    background-color:  orangered;
+    background-color:  #007bff;
     border:none;
     border-radius: 5px;
 }
