--- a/frontend/src/Navbar/nav.css
+++ b/frontend/src/Navbar/nav.css
@@ -6,7 +6,7 @@
 
 /* Navbar Styling */
 nav {
-  background-color: hsla(16, 94%, 50%, 0.572);
+  background-color: #007bff;
   color: #fff;
   padding: 10px 20px;
 }
