--- a/frontend/src/pages/landingpage.css
+++ b/frontend/src/pages/landingpage.css
@@ -23,6 +23,13 @@ body {
   margin-bottom: 40px;
   animation: fadeInDown 1s ease-in-out;
 }
+.header-container{
+  position:relative;
+}
+.header-img{
+    position:absolute;
+    right:15px;
+}
 
 .header h1 {
   font-size: 3em;
