--- a/frontend/src/Forms/RegisterForm.css
+++ b/frontend/src/Forms/RegisterForm.css
@@ -1,7 +1,10 @@
 * {
   box-sizing: border-box;
 }
-
+.shelter-logo1{
+    display:block;
+    max-height: 50px;
+}
 body {
   margin: 0;
   height: 100vh;
@@ -25,11 +28,12 @@ body {
     top:0;
     
 }
-.form-img1,
-.form-img2{
+.form-img,
+.form-img1{
     position: absolute;
     height: 200px;
     left: 20%;
+    display:none;
     
 }
 .form-img2{
@@ -44,7 +48,9 @@ body {
   flex-direction: column;
   align-items: center;
   box-shadow: 5px 5px 15px -1px rgba(0, 0, 0, 0.75);
-  min-width: 50%;
+  
+  max-width: 60%;
+  min-width:40%;
 }
 
 .form--input {
@@ -58,8 +64,15 @@ body {
 }
 @media screen and (max-width: 600px) {
     .form-img1,
-    .form-img2{
+    .form-img{
         display: none;
+    }
+    .form{
+     max-width: 100%;
+     min-width: 50%;
+    }
+    .form-container{
+        padding:0px;
     }
 }
 .form--submit {
