--- a/frontend/src/Navbar/nav.css
+++ b/frontend/src/Navbar/nav.css
@@ -50,7 +50,9 @@ nav {
     flex-direction: column;
     align-items: flex-start;
   }
-
+  .shelter-logo {
+    display:none;
+  }
   .nav-links {
     flex-direction: column;
     width: 100%;
